--- a/catalogue/copernicus-dem/GLO-30/__item__.yaml
+++ b/catalogue/copernicus-dem/GLO-30/__item__.yaml
@@ -8,10 +8,10 @@ links:
   href: https://destination-earth.eu/
   type: text/html
 bbox:
-- -27
-- 26
-- 45
-- 74
+- -180
+- -90
+- 180
+- 90
 properties:
   start_datetime: '2022-01-01T12:00:00Z'
   end_datetime: '2022-01-01T12:00:00Z'
@@ -26,12 +26,12 @@ properties:
       type: spatial
       axis: y
       reference_system: 4326
-      step: 0.083
+      step: 0.0000278
     longitude:
       type: spatial
       axis: x
       reference_system: 4326
-      step: 0.083
+      step: 0.0000278
   cube:variables:
     dsm:
       dimensions:
@@ -42,7 +42,7 @@ properties:
       unit: m
 assets:
   data:
-    href: s3://copernicus-dem/GLO-90-europe-v0.zarr
+    href: s3://copernicus-dem/GLO-30-v0.zarr
     roles:
     - data
     xarray:open_kwargs:
