--- a/catalogue/copernicus-dem/GLO-30/__item__.yaml
+++ b/catalogue/copernicus-dem/GLO-30/__item__.yaml
@@ -26,12 +26,12 @@ properties:
       type: spatial
       axis: y
       reference_system: 4326
-      step: 0.0000278
+      step: 0.000028
     longitude:
       type: spatial
       axis: x
       reference_system: 4326
-      step: 0.0000278
+      step: 0.000028
   cube:variables:
     dsm:
       dimensions:
