--- a/catalogue/era5/reanalysis-era5-land/__item__.yaml
+++ b/catalogue/era5/reanalysis-era5-land/__item__.yaml
@@ -17,7 +17,7 @@ properties:
   end_datetime: '2023-10-31T23:00:00Z'
   dc:abstract: Europe ERA5-Land hourly data from 1950 to 2023
   dc:access_rights: free of charge
-  dc:title: ERA5-Land hourly data over Europe
+  dc:title: ERA5-Land hourly data
   dc:subject:
   - ERA5
   - Land
