--- a/catalogue/cmems-reanalysis/cmems_mod_glo_phy_my_0.083_P1D-m/__item__.yaml
+++ b/catalogue/cmems-reanalysis/cmems_mod_glo_phy_my_0.083_P1D-m/__item__.yaml
@@ -23,7 +23,7 @@ properties:
   - CMEMS
   - reanalysis
   cube:dimensions:
-    time:
+    valid_time:
       type: temporal
       extent:
       - '1993-01-01T00:00:00Z'
