--- a/catalogue/cmems-reanalysis/cmems_mod_glo_phy_my_0.083_P1D-m/__item__.yaml
+++ b/catalogue/cmems-reanalysis/cmems_mod_glo_phy_my_0.083_P1D-m/__item__.yaml
@@ -28,7 +28,7 @@ properties:
       extent:
       - '1993-01-01T00:00:00Z'
       - '2020-12-31T00:00:00Z'
-      step: PT1D
+      step: P1D
     latitude:
       type: spatial
       axis: y
