--- a/catalogue/ecmwf-forecasts/__collection__.yaml
+++ b/catalogue/ecmwf-forecasts/__collection__.yaml
@@ -5,7 +5,7 @@ dc:abstract:
 
 links:
 - title: Medium-range forecasts
-  rel: documentation
+  rel: derived_from
   href: https://www.ecmwf.int/en/forecasts/documentation-and-support/medium-range-forecasts
   type: text/html
 - title: Licence to use Copernicus products
