--- a/catalogue/ecmwf-forecasts/opendata-oper/__item__.yaml
+++ b/catalogue/ecmwf-forecasts/opendata-oper/__item__.yaml
@@ -27,14 +27,17 @@ properties:
       extent:
       - null
       - null
+      step: PT1H
     latitude:
       type: spatial
       axis: y
       reference_system: 4326
+      step: 0.01
     longitude:
       type: spatial
       axis: x
       reference_system: 4326
+      step: 0.01
   cube:variables:
     10u:
       dimensions:
