update frequency added

--- a/catalogue/cmems-reanalysis/cmems_mod_glo_phy_my_0.083_P1D-m/__item__.yaml
+++ b/catalogue/cmems-reanalysis/cmems_mod_glo_phy_my_0.083_P1D-m/__item__.yaml
@@ -22,6 +22,7 @@ properties:
   - Ocean
   - CMEMS
   - reanalysis
+  dc:accrual_periodicity: freq:monthly
   cube:dimensions:
     valid_time:
       type: temporal
