--- a/catalogue/egg4/cams-global-ghg-reanalysis-egg4/__item__.yaml
+++ b/catalogue/egg4/cams-global-ghg-reanalysis-egg4/__item__.yaml
@@ -26,6 +26,7 @@ properties:
     - greenhouse
     - EGG4
     - gas
+  dc:accrual_periodicity: freq:monthly
   cube:dimensions:
     valid_time:
       type: temporal
