--- a/catalogue/era5/ecv-for-climate-change/__item__.yaml
+++ b/catalogue/era5/ecv-for-climate-change/__item__.yaml
@@ -27,6 +27,7 @@ properties:
   - ECMWF
   - reanalysis
   - climate
+  dc:accrual_periodicity: freq:monthly
   cube:dimensions:
     time:
       type: temporal
