--- a/catalogue/era5/reanalysis-era5-land/__item__.yaml
+++ b/catalogue/era5/reanalysis-era5-land/__item__.yaml
@@ -24,6 +24,7 @@ properties:
   - ECMWF
   - reanalysis
   - weather
+  dc:accrual_periodicity: freq:monthly
   cube:dimensions:
     valid_time:
       type: temporal
