--- a/catalogue/era5/reanalysis-era5-single-levels/__item__.yaml
+++ b/catalogue/era5/reanalysis-era5-single-levels/__item__.yaml
@@ -26,6 +26,7 @@ properties:
   - surface
   - reanalysis
   - weather
+  dc:accrual_periodicity: freq:monthly
   cube:dimensions:
     valid_time:
       type: temporal
